[package]
name = "rust-fsm-dsl"
description = "Macros for rust-fsm DSL"
repository = "https://github.com/eugene-babichenko/rust-fsm"
homepage = "https://github.com/eugene-babichenko/rust-fsm"
documentation = "https://docs.rs/rust-fsm-dsl/"
readme = "../README.md"
license = "MIT"
categories = ["data-structures", "rust-patterns"]
keywords = ["fsm"]
version = "0.9.0"
authors = ["Yevhenii Babichenko"]
edition = "2021"

[lib]
proc-macro = true

[features]
diagram = []
pretty-print = ["prettyplease"]

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
prettyplease = { version = "0.2", optional = true }
